--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@types/signale": "^1.4.4",
     "amqplib": "^0.10.3",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
